--- a/index.html
+++ b/index.html
@@ -14,18 +14,9 @@
 
 <body>
 	<div class="container">
-			<div class="header">
-			<h1>Lars og Birgittes Bryllup</h1>
-		</div>
-		<div class="row well">
-			<div class="col-xs-6">
-				<a href="files/oenskeliste.pdf" class="btn btn-primary"><i class="fa fa-cloud-download fa-2x"></i> Hent ønskelisten</a>
-			</div>
-
-			<div class="col-xs-6">
-				<a href="files/invitation.pdf" class="btn btn-info"><i class="fa fa-cloud-download fa-2x"></i> Hent invitationen</a>
-			</div>
-		</div>
+		<h1>Lars og Birgittes Bryllup</h1>
+		<p><a href="files/oenskeliste.pdf" class="btn btn-primary"><i class="fa fa-cloud-download fa-lg"></i> Hent ønskelisten</a></p>
+		<p><a href="files/invitation.pdf" class="btn btn-info"><i class="fa fa-cloud-download fa-lg"></i> Hent invitationen</a></p>
 	</div>
 </body>
 
