rettet link til filerne

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
 	<div class="container">
 		<h1>Lars og Birgittes Bryllup</h1>
-		<p><a href="files/oenskeliste.pdf" class="btn btn-primary"><i class="fa fa-cloud-download fa-lg"></i> Hent ønskelisten</a></p>
-		<p><a href="files/invitation.pdf" class="btn btn-info"><i class="fa fa-cloud-download fa-lg"></i> Hent invitationen</a></p>
+		<p><a href="http://tinusn.github.io/larschristiansen.dk/files/oenskeliste.pdf" class="btn btn-primary"><i class="fa fa-cloud-download fa-lg"></i> Hent ønskelisten</a></p>
+		<p><a href="http://tinusn.github.io/larschristiansen.dk/files/invitation.pdf" class="btn btn-info"><i class="fa fa-cloud-download fa-lg"></i> Hent invitationen</a></p>
 		<p><a href="https://maps.google.com/maps?saddr=Elbagade,+K%C3%B8benhavn,+Danmark&daddr=Ny+Kongensgade,+K%C3%B8benhavn,+Danmark&hl=da&ie=UTF8&sll=39.131874,-84.516284&sspn=0.011934,0.026157&geocode=FVs1UQMdA3jAACmZtPyTraxTRjF9Nn1TX8hDLQ%3BFc6CUQMdbuS_ACmjSWGDE1NSRjGGP-aDOw0BJw&oq=ny+kon&mra=ls&t=m&z=14" class="btn btn-success"><i class="fa fa-map-marker fa-lg"></i> Link til rutevejledning</a>
 	</div>
 </body>
