--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         height: 500px;
         margin-top: 20px;
     }
+    .links {
+        font-size: 14pt;
+    }
     </style>
 </head>
 
@@ -24,15 +27,18 @@
         <div class="text-center">
             <h1>Lars og Birgittes Bryllup</h1>
         </div>
-        <div class="row">
-            <div class="col-xs-4 text-center">
-                <a href="http://tinusn.github.io/larschristiansen.dk/files/oenskeliste.pdf" class="btn btn-primary"><i class="fa fa-cloud-download fa-lg"></i> Hent ønskelisten</a>
+        <div class="row links">
+            <div class="col-xs-3 text-center">
+                <a href="http://tinusn.github.io/larschristiansen.dk/files/oenskeliste.pdf"><i class="fa fa-cloud-download fa-lg"></i> Ønskelisten</a>
             </div>
-            <div class="col-xs-4 text-center">
-                <a href="http://tinusn.github.io/larschristiansen.dk/files/invitation.pdf" class="btn btn-info"><i class="fa fa-cloud-download fa-lg"></i> Hent invitationen</a>
+            <div class="col-xs-3 text-center">
+                <a href="http://tinusn.github.io/larschristiansen.dk/files/invitation.pdf"><i class="fa fa-cloud-download fa-lg"></i> Invitationen</a>
             </div>
-            <div class="col-xs-4 text-center">
-                <a href="https://www.google.dk/maps/dir/N%C3%B8rg%C3%A5rdsvej+15,+8940+Randers+SV/Frisenvoldvej+3B,+8870+Lang%C3%A5/@56.4034043,9.9631163,15z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x464c04ca24236df5:0xfb177cfca85e6d4f!2m2!1d9.989597!2d56.404546!1m5!1m1!1s0x464c04eed901a07f:0x5aba80269766e176!2m2!1d9.953325!2d56.401065!3e2" class="btn btn-success"><i class="fa fa-map-marker fa-lg"></i> Link til rutevejledning</a>
+            <div class="col-xs-3 text-center">
+                <a href="https://www.google.dk/maps/dir/N%C3%B8rg%C3%A5rdsvej+15,+8940+Randers+SV/Frisenvoldvej+3B,+8870+Lang%C3%A5/@56.3970851,9.9555202,14z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x464c04ca24236df5:0xfb177cfca85e6d4f!2m2!1d9.989597!2d56.404546!1m5!1m1!1s0x464c04eed901a07f:0x5aba80269766e176!2m2!1d9.953325!2d56.401065!3e0"><i class="fa fa-map-marker fa-lg"></i> Kirke til parkering</a>
+            </div>
+            <div class="col-xs-3 text-center">
+                <a href="https://www.google.dk/maps/dir/N%C3%B8rg%C3%A5rdsvej+15,+8940+Randers+SV/N%C3%B8rg%C3%A5rdsvej+12,+8940+Randers+SV/@56.4039759,9.9877197,17z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x464c04ca24236df5:0xfb177cfca85e6d4f!2m2!1d9.989597!2d56.404546!1m5!1m1!1s0x464c04cbcc826c71:0x2d2b6aada82ce716!2m2!1d9.990134!2d56.4034!3e2"><i class="fa fa-map-marker fa-lg"></i> Parkering til forsamlingshus</a>
             </div>
         </div>
         <div class="row">
@@ -43,26 +49,35 @@
     </div>
     <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyDXd3qOrQXQhWXn4XS-hmQRcMS-tVFlbW8&sensor=false"></script>
     <script>
-    var center = new google.maps.LatLng(56.401187, 9.953293);
+    var center = new google.maps.LatLng(56.401049,9.9726134);
 
     var mapOptions = {
         center: center,
-        zoom: 13,
+        zoom: 15,
         streetViewControl: false
     };
 
     var map = new google.maps.Map(document.getElementById('map'), mapOptions);
 
-    var marker = new google.maps.Marker({
-        position: center,
+    var kirke = new google.maps.Marker({
+        position: new google.maps.LatLng(56.401187, 9.953293),
         map: map,
-        title: 'Ørum Kirke - Frisenvoldvej 3B, Jebjerg, 8870 Langå'
+        title: 'Ørum Kirke - Frisenvoldvej 3B, Jebjerg, 8870 Langå',
+        icon: 'images/church-32.png'
     });
 
-    var marker = new google.maps.Marker({
+    var parkering = new google.maps.Marker({
         position: new google.maps.LatLng(56.404709, 9.989576),
         map: map,
-        title: 'Værum kirke - Nørgårdsvej 15, Værum, 8940 Randers SV'
+        title: 'Værum kirke - Nørgårdsvej 15, Værum, 8940 Randers SV',
+        icon: 'images/car-32.png'
+    });
+
+    var fest = new google.maps.Marker({
+        position: new google.maps.LatLng(56.403462, 9.990102),
+        map: map,
+        title: 'Forsamlingshus - Nørgårdsvej 12, 8940 Randers SV',
+        icon: 'images/bar-32.png'
     });
     </script>
 </body>
