--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="https://www.google.dk/maps/dir/N%C3%B8rg%C3%A5rdsvej+15,+8940+Randers+SV/Frisenvoldvej+3B,+8870+Lang%C3%A5/@56.3970851,9.9555202,14z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x464c04ca24236df5:0xfb177cfca85e6d4f!2m2!1d9.989597!2d56.404546!1m5!1m1!1s0x464c04eed901a07f:0x5aba80269766e176!2m2!1d9.953325!2d56.401065!3e0"><i class="fa fa-map-marker fa-lg"></i> Kirke til parkering</a>
             </div>
             <div class="col-xs-3 text-center">
-                <a href="https://www.google.dk/maps/dir/N%C3%B8rg%C3%A5rdsvej+15,+8940+Randers+SV/N%C3%B8rg%C3%A5rdsvej+12,+8940+Randers+SV/@56.4039759,9.9877197,17z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x464c04ca24236df5:0xfb177cfca85e6d4f!2m2!1d9.989597!2d56.404546!1m5!1m1!1s0x464c04cbcc826c71:0x2d2b6aada82ce716!2m2!1d9.990134!2d56.4034!3e2"><i class="fa fa-map-marker fa-lg"></i> Parkering til forsamlingshus</a>
+                <a href="https://www.google.dk/maps/dir/N%C3%B8rg%C3%A5rdsvej+15,+8940+Randers+SV/N%C3%B8rg%C3%A5rdsvej+30,+8940+Randers+SV/@56.4049177,9.9877111,17z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x464c04ca24236df5:0xfb177cfca85e6d4f!2m2!1d9.989597!2d56.404546!1m5!1m1!1s0x464c04ca197bfac7:0x3b3fab48680aff5d!2m2!1d9.990054!2d56.405297!3e2"><i class="fa fa-map-marker fa-lg"></i> Parkering til forsamlingshus</a>
             </div>
         </div>
         <div class="row">
@@ -49,7 +49,7 @@
     </div>
     <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyDXd3qOrQXQhWXn4XS-hmQRcMS-tVFlbW8&sensor=false"></script>
     <script>
-    var center = new google.maps.LatLng(56.401049,9.9726134);
+    var center = new google.maps.LatLng(56.401049, 9.9726134);
 
     var mapOptions = {
         center: center,
@@ -74,9 +74,9 @@
     });
 
     var fest = new google.maps.Marker({
-        position: new google.maps.LatLng(56.403462, 9.990102),
+        position: new google.maps.LatLng(56.405297, 9.990054),
         map: map,
-        title: 'Forsamlingshus - Nørgårdsvej 12, 8940 Randers SV',
+        title: 'Forsamlingshus - Nørgårdsvej 30, 8940 Randers SV',
         icon: 'images/bar-32.png'
     });
     </script>
