--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 <a href="http://tinusn.github.io/larschristiansen.dk/files/invitation.pdf"><i class="fa fa-cloud-download fa-lg"></i> Invitationen</a>
             </div>
             <div class="col-xs-3 text-center">
-                <a href="https://www.google.dk/maps/dir/N%C3%B8rg%C3%A5rdsvej+15,+8940+Randers+SV/Frisenvoldvej+3B,+8870+Lang%C3%A5/@56.3970851,9.9555202,14z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x464c04ca24236df5:0xfb177cfca85e6d4f!2m2!1d9.989597!2d56.404546!1m5!1m1!1s0x464c04eed901a07f:0x5aba80269766e176!2m2!1d9.953325!2d56.401065!3e0"><i class="fa fa-map-marker fa-lg"></i> Kirke til parkering</a>
+                <a href="https://www.google.dk/maps/dir/Frisenvoldvej+3B,+8870+Lang%C3%A5/Ved+Kirken+10,+8940+Randers+SV/@56.3968643,9.9641034,15z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x464c04eed901a07f:0x5aba80269766e176!2m2!1d9.953325!2d56.401065!1m5!1m1!1s0x464c04c992ca7ba5:0x4ccb7c7b1377cbb6!2m2!1d9.9893439!2d56.404988!3e0"><i class="fa fa-map-marker fa-lg"></i> Kirke til parkering</a>
             </div>
             <div class="col-xs-3 text-center">
-                <a href="https://www.google.dk/maps/dir/N%C3%B8rg%C3%A5rdsvej+15,+8940+Randers+SV/N%C3%B8rg%C3%A5rdsvej+30,+8940+Randers+SV/@56.4049177,9.9877111,17z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x464c04ca24236df5:0xfb177cfca85e6d4f!2m2!1d9.989597!2d56.404546!1m5!1m1!1s0x464c04ca197bfac7:0x3b3fab48680aff5d!2m2!1d9.990054!2d56.405297!3e2"><i class="fa fa-map-marker fa-lg"></i> Parkering til forsamlingshus</a>
+                <a href="https://www.google.dk/maps/dir/Ved+Kirken+10,+8940+Randers+SV/N%C3%B8rg%C3%A5rdsvej+30,+8940+Randers+SV/@56.4051281,9.9875532,17z/data=!3m1!4b1!4m13!4m12!1m5!1m1!1s0x464c04c992ca7ba5:0x4ccb7c7b1377cbb6!2m2!1d9.9893439!2d56.404988!1m5!1m1!1s0x464c04ca197bfac7:0x3b3fab48680aff5d!2m2!1d9.990054!2d56.405297"><i class="fa fa-map-marker fa-lg"></i> Parkering til forsamlingshus</a>
             </div>
         </div>
         <div class="row">
@@ -67,9 +67,9 @@
     });
 
     var parkering = new google.maps.Marker({
-        position: new google.maps.LatLng(56.404709, 9.989576),
+        position: new google.maps.LatLng(56.4049966, 9.9893538),
         map: map,
-        title: 'Værum kirke - Nørgårdsvej 15, Værum, 8940 Randers SV',
+        title: 'P pladsen ved sportsanlæget - Ved Kirken 10, 8940 Randers SV',
         icon: 'images/car-32.png'
     });
 
