--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
             <h1>Lars og Birgittes Bryllup</h1>
         </div>
         <div class="row links">
-            <div class="col-xs-3 text-center">
+            <div class="col-xs-2 text-center">
                 <a href="http://tinusn.github.io/larschristiansen.dk/files/oenskeliste.pdf"><i class="fa fa-cloud-download fa-lg"></i> Ønskelisten</a>
             </div>
-            <div class="col-xs-3 text-center">
+            <div class="col-xs-2 text-center">
                 <a href="http://tinusn.github.io/larschristiansen.dk/files/invitation.pdf"><i class="fa fa-cloud-download fa-lg"></i> Invitationen</a>
+            </div>
+            <div class="col-xs-2 text-center">
+                <a href="http://tinusn.github.io/larschristiansen.dk/files/polderliste.pdf"><i class="fa fa-cloud-download fa-lg"></i> Polderlisten</a>
             </div>
             <div class="col-xs-3 text-center">
                 <a href="https://www.google.dk/maps/dir/Frisenvoldvej+3B,+8870+Lang%C3%A5/Ved+Kirken+10,+8940+Randers+SV/@56.3968643,9.9641034,15z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x464c04eed901a07f:0x5aba80269766e176!2m2!1d9.953325!2d56.401065!1m5!1m1!1s0x464c04c992ca7ba5:0x4ccb7c7b1377cbb6!2m2!1d9.9893439!2d56.404988!3e0"><i class="fa fa-map-marker fa-lg"></i> Kirke til parkering</a>
