--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="row links">
             <div class="col-xs-2 text-center">
-                <a href="http://tinusn.github.io/larschristiansen.dk/files/oenskeliste.pdf"><i class="fa fa-cloud-download fa-lg"></i> Ønskelisten</a>
+                <a href="http://tinusn.github.io/larschristiansen.dk/files/oenskeliste.xlsx"><i class="fa fa-cloud-download fa-lg"></i> Ønskelisten</a>
             </div>
             <div class="col-xs-2 text-center">
                 <a href="http://tinusn.github.io/larschristiansen.dk/files/invitation.pdf"><i class="fa fa-cloud-download fa-lg"></i> Invitationen</a>
